assets/css/custom.css
.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: auto;
}

.w-1\/2 {
    width: 50%;
}
.w-1\/3 {
    width: 33.333333%;
}
.w-2\/3 {
    width: 66.666667%;
}
.w-1\/4 {
    width: 25%;
}
.w-2\/4 {
    width: 50%;
}
.w-3\/4 {
    width: 75%;
}
.w-1\/5 {
    width: 20%;
}
.w-2\/5 {
    width: 40%;
}
.w-3\/5 {
    width: 60%;
}
.w-4\/5 {
    width: 80%;
}

